--- a/estructura de archivos/package.json
+++ b/estructura de archivos/package.json
@@ -3,9 +3,13 @@
     "version": "0.0.0",
     "private": true,
     "scripts": {
-        "dev": "nodemon ./src/bin/www",
         "start": "node ./src/bin/www",
-        "reset-db": "sequelize db:migrate:undo:all & sequelize db:migrate & sequelize db:seed:all & npm run dev"
+        "server": "nodemon ./src/bin/www",
+        "client:start": "cd admin & npm run start",
+        "client:build": "cd admin & npm run build",
+        "dev": "concurrently \"npm run server\" \"npm run client:start\"",
+        "db:create": "sequelize db:drop & sequelize db:create & sequelize db:migrate & sequelize db:seed:all",
+        "db:reset": "sequelize db:migrate:undo:all & sequelize db:migrate &sequelize db:seed:all"
     },
     "nodemonConfig": {
         "ignore": "*.json"
@@ -13,6 +17,7 @@
     "dependencies": {
         "bcryptjs": "^2.4.3",
         "cookie-parser": "~1.4.4",
+        "cors": "^2.8.5",
         "debug": "~2.6.9",
         "dotenv": "^16.0.3",
         "ejs": "~2.6.1",
@@ -27,5 +32,8 @@
         "mysql2": "^2.3.3",
         "nodemon": "^2.0.20",
         "sequelize": "^6.24.0"
+    },
+    "devDependencies": {
+        "concurrently": "^7.6.0"
     }
 }
