--- a/estructura de archivos/package.json
+++ b/estructura de archivos/package.json
@@ -31,6 +31,8 @@
         "multer": "^1.4.5-lts.1",
         "mysql2": "^2.3.3",
         "nodemon": "^2.0.20",
+        "passport": "^0.6.0",
+        "passport-google-oauth20": "^2.0.0",
         "sequelize": "^6.24.0",
         "sweetalert2": "^11.6.15"
     },
